force-app/main/default/objects/Tutorial__c/Tutorial__c.object-meta.xml
<CustomObject>
    <label>Processo</label>
    <nameField>
        <label>Nome de Tutorial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>