force-app/main/default/objects/Tutorial__c/fields/Autor_do_tutorial__c.field-meta.xml
<CustomField>
    <fullName>Autor_do_tutorial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pelo Processo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Processos</relationshipLabel>
    <relationshipName>Tutoriais</relationshipName>
    <type>Lookup</type>
</CustomField>