force-app/main/default/objects/Tutorial__c/fields/Descri_o__c.field-meta.xml
<CustomField>
    <fullName>Descri_o__c</fullName>
    <label>Descrição</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>