force-app/main/default/objects/Tutorial__c/fields/Gargalos_Encontrados__c.field-meta.xml
<CustomField>
    <fullName>Gargalos_Encontrados__c</fullName>
    <label>Gargalos Encontrados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>