force-app/main/default/objects/Tutorial__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarefas</fullName>
            </value>
            <value>
                <fullName>PSQs</fullName>
            </value>
            <value>
                <fullName>Treinamentos</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>