force-app/main/default/objects/Tutorial__c/listViews/Comercial.listView-meta.xml
<ListView>
    <fullName>Comercial</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Comercial</value>
    </filters>
    <label>Comercial</label>
</ListView>