force-app/main/default/objects/Tutorial__c/listViews/Desenvolvimento.listView-meta.xml
<ListView>
    <fullName>Desenvolvimento</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Autor_do_tutorial__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Desenvolvimento</value>
    </filters>
    <label>Desenvolvimento</label>
</ListView>