force-app/main/default/objects/Tutorial__c/listViews/Governo.listView-meta.xml
<ListView>
    <fullName>Governo</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Governo</value>
    </filters>
    <label>Governo</label>
</ListView>