force-app/main/default/objects/Tutorial__c/listViews/Loca_o.listView-meta.xml
<ListView>
    <fullName>Loca_o</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Locação</value>
    </filters>
    <label>Locação</label>
</ListView>