force-app/main/default/objects/Tutorial__c/listViews/Log_stica.listView-meta.xml
<ListView>
    <fullName>Log_stica</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Logística</value>
    </filters>
    <label>Logística</label>
</ListView>