force-app/main/default/objects/Tutorial__c/listViews/psa_todos.listView-meta.xml
<ListView>
    <fullName>psa_todos</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Autor_do_tutorial__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>PSA</value>
    </filters>
    <label>PSA</label>
</ListView>