force-app/main/default/objects/Tutorial__c/listViews/Qualidade.listView-meta.xml
<ListView>
    <fullName>Qualidade</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Qualidade</value>
    </filters>
    <label>Qualidade</label>
</ListView>