force-app/main/default/objects/Tutorial__c/listViews/Servi_os.listView-meta.xml
<ListView>
    <fullName>Servi_os</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Serviço</value>
    </filters>
    <label>Serviços</label>
</ListView>